# crisis-companion

./: .gitignore  ANONYMIZE_PERSONAL_INFO.md  CITATIONS.md  COMPLETE_APP_SUMMARY.md  COMPLETE_APP_WALKTHROUGH.md  CONSISTENCY_CHECK.md  CONTEXT_AWARE_GUIDANCE.md  CONTEXT_AWARE_SOLUTION.md  CONTRIBUTING.md  CRITICAL_SELF_RESCUE_IMPLEMENTATION.md  Cargo.toml  Crisis_Companion_Updated_Overview.html  Crisis_Companion_Updated_Overview.md  DAPP_STORE_READINESS.md  DEMO_SCRIPT.md  DEMO_SCRIPT_SIMPLE.md  DEMO_TO_PRODUCTION_GUIDE.md  DEMO_VIDEO_SCRIPT.md  DEMO_VIDEO_SCRIPT_backup.md  DEMO_VOICEOVER.md  DEPLOYMENT_ROADMAP.md  DEVELOPMENT_JOURNAL.md  EMERGENCY_DATABASE_README.md  EMERGENCY_PHRASE_ANALYSIS.md  ENHANCED_TECH_ROADMAP.md  ENHANCEMENT_SUMMARY.md  HACKATHON_QUICK_REFERENCE.md  HACKATHON_SUBMISSION.md  HACKATHON_SUBMISSION_BACKUP.md  HACKATHON_SUBMISSION_CHECKLIST.md  HACKATHON_SUBMISSION_backup.md  HIGH_ACCURACY_SYSTEM_SUMMARY.md  IMMEDIATE_OPTIMIZATIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  JUDGES_GUIDE.md  JUDGE_Q&A.md  LAYMAN_WALKTHROUGH.md  LICENSE  LICENSE_MIT_backup.md  (+43 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
android-app/: README.md  build-rust.sh  build-simple.sh  build.gradle  local.properties  settings.gradle  window_dump.xml
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt
android-app/app/src/main/java/com/solanasos/emergency/: CrossAppChallengesActivity.kt  EmergencyService.kt  InfoActivity.kt  MainActivity.kt  MobileWalletAdapter.kt  RustBridge.kt  SettingsActivity.kt  SolanaIntegration.kt  SolanaMobileIntegration.kt  TrainingActivity.kt  WalletSelectionDialog.kt
android-app/app/src/main/res/drawable/: action_button_background.xml  circular_progress.xml  circular_progress_background.xml  clickable_card_background.xml  dark_button.xml  emergency_action_button.xml  emergency_button.xml  emergency_button_calm.xml  emergency_options_background.xml  emergency_response_background.xml  features_background.xml  features_card_background.xml  ic_arrow_right.xml  ic_mic_listening.xml  ic_wallet.xml  ic_wallet_backpack.xml  ic_wallet_exodus.xml  ic_wallet_phantom.xml  ic_wallet_solflare.xml  ic_wallet_trust.xml  outline_button_background.xml  rounded_dialog_background.xml  settings_button.xml  shield_icon.xml  status_background.xml  voice_button.xml  wallet_button.xml
android-app/app/src/main/res/layout/: activity_cross_app_challenges.xml  activity_info.xml  activity_info_backup.xml  activity_info_old.xml  activity_main.xml  activity_settings.xml  activity_training.xml  demo_dialog.xml  demo_selection_dialog.xml  dialog_wallet_selection.xml  item_wallet.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/gradle/wrapper/: gradle-wrapper.properties
android/app/src/main/: AndroidManifest.xml
app/src/main/java/com/solanasos/emergency/: HackathonPresentationActivity.kt  InfoActivity.kt
app/src/main/res/layout/: activity_hackathon_presentation.xml  activity_info.xml
assets/: database.sql
assets/instructions/: README.md
data/: emergencies.db
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md
presentations/: README.md
src/: adaptive_training.rs  app.rs  audio.rs  audio_interface.rs  blockchain.rs  blockchain_interface.rs  config.rs  context_analysis.rs  coordination.rs  crash_detection.rs  database.rs  database_interface.rs  emergency.rs  emergency_calling.rs  emergency_database.rs  error.rs  gamification.rs  gamification_interface.rs  jni_bridge.rs  lib.rs  main.rs  medical_ai.rs  noise_filter.rs  role_detection.rs  safety_features.rs  safety_interface.rs  training_ai_interface.rs  training_interface.rs  types.rs  ui.rs  ui_interface.rs  voice.rs  vosk_wrapper.rs
src/context_analysis/: context_analysis.rs  guidance_generation.rs  mod.rs  stage_detection.rs
src/public/: audio_interface.rs  emergency_interface.rs  types.rs  voice_interface.rs
