[package]
name = "solana-sos"
version = "0.1.0"
edition = "2021"
authors = ["Paragoner"]
description = "Voice-activated emergency response app with hybrid offline/online architecture"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
config = "0.13"
rusqlite = { version = "0.29", features = ["bundled"] }
rodio = "0.21"
nnnoiseless = "0.5"
marek_vosk_speech_recognition = "2.1"
rand = "0.8"
sms = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["desktop"]
desktop = []
android = []
jni = []
private = []

[dev-dependencies]
criterion = "0.5" 