[package]
name = "solana-sos"
version = "1.0.0"
edition = "2021"
authors = ["Paragoner <paragoner@solanasos.com>"]
description = "Voice-activated emergency response system for Solana Mobile"
license = "Apache-2.0"
repository = "https://github.com/paragoner1/crisis-companion"
keywords = ["emergency", "voice", "solana", "mobile", "safety"]
categories = ["emergency", "voice-recognition", "blockchain"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }

# Voice recognition
vosk = "0.3.1"

# Audio processing
nnnoiseless = "0.5"
rodio = "0.17"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"

# JNI for Android integration
jni = "0.21"

# UUID for gamification
uuid = { version = "1.0", features = ["v4"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for online features
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.13"

# Logging
env_logger = "0.10"

[features]
default = []
private = []

[[bin]]
name = "solana-sos"
path = "src/main.rs"

[[bin]]
name = "demo_test"
path = "src/bin/demo_test.rs"

[[bin]]
name = "gamification_demo"
path = "src/bin/gamification_demo.rs"

[[bin]]
name = "complete_walkthrough"
path = "src/bin/complete_walkthrough.rs"

[lib]
name = "solana_sos"
crate-type = ["cdylib", "rlib"] 